--- a/frontend-react/src/components/Layout.css
+++ b/frontend-react/src/components/Layout.css
@@ -165,6 +165,8 @@
     flex-grow: 1;
     min-height: 100dvh;
     width: calc(100vw - 260px);
+    max-width: calc(100vw - 260px);
+    overflow-x: hidden;
     background: var(--color-bg-main);
 }
 
@@ -216,6 +218,8 @@
     .main-content {
         margin-left: 0;
         width: 100vw;
+        max-width: 100vw;
+        overflow-x: hidden;
         padding-top: 54px;
         padding-bottom: calc(var(--bottom-nav-height) + 1.25rem);
     }
